# tracing-honeycombio

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
benches/: event_micro.rs  simple_bench.rs  span_micro.rs
examples/: simple.rs
src/: background.rs  builder.rs  layer.rs  lib.rs
