[package]
name = "tracing-honeycombio"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
reqwest = { version = "0.12.19", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zstd = "0.13.2"

[dev-dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-mock = { version = "0.1.0-beta.1", features = ["tracing-subscriber"] }
