[package]
name = "tracing-honeycombio"
version = "0.1.0"
edition = "2024"

[dependencies]
quanta = "0.12.0"
rand = { version = "0.9.1", default-features = false, features = [
  "std",
  "alloc",
  "os_rng",
  "small_rng",
] }
reqwest = { version = "0.12.19", default-features = false, features = [
  "http2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.45.1", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zstd = "0.13.2"

[dev-dependencies]
axum = { version = "0.8.4", features = ["macros"] }
criterion = "0.6.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-mock = { version = "0.1.0-beta.1", features = ["tracing-subscriber"] }

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "span_micro"
harness = false

[[bench]]
name = "event_micro"
harness = false

[features]
default = ["native-tls", "system-proxy"]

default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
system-proxy = ["reqwest/system-proxy"]
